# bubbles

./: .gitignore  CMakeLists.txt  README.md  cmake_msvc10.cmd  makefile
build.msvc10/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Bubbles.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bubbles.vcxproj  bubbles.vcxproj.filters
src/: CMakeLists.txt  main.cpp
src/game/: Bubble.cpp  Bubble.h  CMakeLists.txt  GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  IBoardSize.h  Scene.cpp  Scene.h  consts.h  game.cpp  game.h
src/game/objects/: Bubble.cpp  Bubble.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  Scoreboard.cpp  Scoreboard.h
src/game/visitors/: CalcBubblesVisitor.cpp  CalcBubblesVisitor.h  ClickVisitor.cpp  ClickVisitor.h  DrawVisitor.cpp  DrawVisitor.h  IGameObjVisitor.cpp  IGameObjVisitor.h  UpdateVisitor.cpp  UpdateVisitor.h
src/starter.android/: CMakeLists.txt
src/starter.android/Bubbles/: AndroidManifest.xml
src/starter.android/Bubbles/jni/: bubblescall.cpp  bubblescall.h
src/starter.android/Bubbles/res/layout/: activity_bubbles.xml
src/starter.android/Bubbles/res/values/: strings.xml
src/starter.android/Bubbles/src/com/voksoft/bubbles/: BubblesActivity.java  GameView.java  NativeCaller.java
src/starter.android/Bubbles/src/com/voksoft/bubbles/util/: SystemUiHider.java  SystemUiHiderBase.java  SystemUiHiderHoneycomb.java
src/starter.win32/: Application.cpp  Application.h  CMakeLists.txt  Graphics.cpp  Graphics.h  main.cpp
src/tools/: Singleton.h  (+3 more)
tools/: create-ndk-toolchains.sh  ndk-toolchains-list.txt
(+13 files in other folders)
